# agentica-mcp-runtime

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
src/agentica_mcp_runtime/: __init__.py  __main__.py  isolated_runner.py  sandbox.py  server.py  tool_loader.py
tests/: conftest.py  test_cli.py  test_concurrency.py  test_error_classifier.py  test_isolated.py  test_sandbox.py  test_server.py  test_shadow_lint.py  test_stubs.py  test_tool_loader.py  test_wrapper.py
